# CPR-ROSbot2-Pure-Pursuit

./: README.md
husarion_components_description/launch/: gz_components.launch.py  gz_luxonis_depthai.launch.py  gz_orbbec_astra.launch.py  gz_stereolabs_zed.launch.py
husarion_components_description/urdf/: ouster.urdf.xacro
open_manipulator_x/: .pre-commit-config.yaml  README.md
open_manipulator_x/open_manipulator_x_description/: CHANGELOG.rst  CMakeLists.txt  package.xml
open_manipulator_x/open_manipulator_x_joy/: CMakeLists.txt  package.xml
open_manipulator_x/open_manipulator_x_moveit/: .setup_assistant  CMakeLists.txt  package.xml
rosbot_ros/: .pre-commit-config.yaml  CONTRIBUTING.md  MANIPULATOR.md  README.md  ROS_API.md
rosbot_ros/.devcontainer/: Dockerfile
rosbot_ros/docker/: Dockerfile.hardware  Dockerfile.simulation  compose.rosbot.yaml  compose.rosbot_xl.yaml  compose.simulation.yaml
rosbot_ros/rosbot/: CHANGELOG.rst  manipulator.repos  package.xml  rosbot_hardware.repos  rosbot_simulation.repos
rosbot_ros/rosbot_bringup/: CHANGELOG.rst  package.xml  setup.py
rosbot_ros/rosbot_controller/: CHANGELOG.rst  package.xml  setup.py
rosbot_ros/rosbot_description/: CHANGELOG.rst  CMakeLists.txt  package.xml
rosbot_ros/rosbot_gazebo/: CHANGELOG.rst  package.xml  setup.py
rosbot_ros/rosbot_joy/: CHANGELOG.rst  CMakeLists.txt  package.xml
rosbot_ros/rosbot_joy/config/: joy.yaml
rosbot_ros/rosbot_joy/launch/: joy.launch.py
rosbot_ros/rosbot_localization/: CHANGELOG.rst  package.xml
rosbot_ros/rosbot_utils/: CHANGELOG.rst  package.xml  (+1 more)
(+59 files in other folders)
